force-app/main/default/objects/Contact/fields/Abteilung_AT__c.field-meta.xml
<CustomField>
    <fullName>Abteilung_AT__c</fullName>
    <label>Abteilung AT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Orthopädie</fullName>
            </value>
            <value>
                <fullName>Unfallchirurgie</fullName>
            </value>
            <value>
                <fullName>Neurochirurgie</fullName>
            </value>
            <value>
                <fullName>Allgemeine Chirurgie</fullName>
            </value>
            <value>
                <fullName>Plastische Chirurgie</fullName>
            </value>
            <value>
                <fullName>Verbrennungschirurgie</fullName>
            </value>
            <value>
                <fullName>Sterilisation</fullName>
            </value>
            <value>
                <fullName>Dermatologie</fullName>
            </value>
            <value>
                <fullName>Wirbelsäulenzentrum</fullName>
            </value>
            <value>
                <fullName>Verwaltung</fullName>
            </value>
            <value>
                <fullName>Zentral OP (Z-OP)</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>Einkauf</fullName>
            </value>
            <value>
                <fullName>Apotheke</fullName>
            </value>
            <value>
                <fullName>Sekretariat</fullName>
            </value>
            <value>
                <fullName>Allgemeine Chirurgie m. Unfallchirurgie</fullName>
            </value>
            <value>
                <fullName>Anästhesiologie</fullName>
            </value>
            <value>
                <fullName>Ärztliche Direktion</fullName>
            </value>
            <value>
                <fullName>Chirurgische Abteilung</fullName>
            </value>
            <value>
                <fullName>Geschäftsführung</fullName>
            </value>
            <value>
                <fullName>Interne Medizin</fullName>
            </value>
            <value>
                <fullName>Ordinationsgemeinschaft</fullName>
            </value>
            <value>
                <fullName>Präsident der Öst. Ges.f. Fußchirurgie</fullName>
            </value>
            <value>
                <fullName>Radiologie</fullName>
            </value>
            <value>
                <fullName>Wirbelsäulenchirurgie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>