force-app/main/default/objects/Contact/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account.OwnerId</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>