force-app/main/default/objects/Contact/fields/AD_Username__c.field-meta.xml
<CustomField>
    <fullName>AD_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AD Username</label>
    <length>12</length>
    <type>Text</type>
</CustomField>