force-app/main/default/objects/Contact/fields/ADM_Recon_OSP_AT__c.field-meta.xml
<CustomField>
    <fullName>ADM_Recon_OSP_AT__c</fullName>
    <label>ADM/Recon Surgical AT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Christian Brückler</fullName>
            </value>
            <value>
                <fullName>Paul Jozsa</fullName>
            </value>
            <value>
                <fullName>Roland Immler</fullName>
            </value>
            <value>
                <fullName>Wolfgang Weber</fullName>
            </value>
            <value>
                <fullName>Adam Frey</fullName>
            </value>
            <value>
                <fullName>Michael Bständig</fullName>
            </value>
            <value>
                <fullName>Jürgen Jester</fullName>
            </value>
            <value>
                <fullName>Gerhard Klotz</fullName>
            </value>
            <value>
                <fullName>Gerhard Beyer</fullName>
            </value>
            <value>
                <fullName>Thomas Tramontana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>