force-app/main/default/objects/Contact/fields/ADM_Spine_AT__c.field-meta.xml
<CustomField>
    <fullName>ADM_Spine_AT__c</fullName>
    <label>ADM Spine AT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Martin Pohl</fullName>
                <default>true</default>
                <label>Martin Pohl</label>
            </value>
            <value>
                <fullName>Christian Unterlechner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>