force-app/main/default/objects/Contact/fields/ADM_Trauma_AT__c.field-meta.xml
<CustomField>
    <fullName>ADM_Trauma_AT__c</fullName>
    <label>ADM Trauma AT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Martin Heigl</fullName>
                <default>true</default>
                <label>Martin Heigl</label>
            </value>
            <value>
                <fullName>Günter Kerndler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>