force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
LastModifiedDate - CreatedDate &gt; 0 ,
TEXT( FLOOR( LastModifiedDate - CreatedDate ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (LastModifiedDate - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (LastModifiedDate - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>