force-app/main/default/objects/Contact/fields/All_Content_Types_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>All_Content_Types_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Content Types Opt_In</label>
    <type>Checkbox</type>
</CustomField>