force-app/main/default/objects/Contact/fields/AM_US_Asset_Waiver_Count__c.field-meta.xml
<CustomField>
    <fullName>AM_US_Asset_Waiver_Count__c</fullName>
    <label>AM-US Asset Waiver Count</label>
    <summaryFilterItems>
        <field>HR_Contract__c.Contract_Type__c</field>
        <operation>equals</operation>
        <value>Asset Waiver</value>
    </summaryFilterItems>
    <summaryForeignKey>HR_Contract__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>