force-app/main/default/objects/Contact/fields/Anniversary_Month__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Month__c</fullName>
    <formula>MONTH(Hire_Date__c) = MONTH(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Month</label>
    <type>Checkbox</type>
</CustomField>