force-app/main/default/objects/Contact/fields/Arts_in_opleiding__c.field-meta.xml
<CustomField>
    <fullName>Arts_in_opleiding__c</fullName>
    <description>Beschrijf het cluster en de planning.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Beschrijf het cluster en de planning.</inlineHelpText>
    <label>Arts in opleiding</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>