force-app/main/default/objects/Contact/fields/Asset_Waiver_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Waiver_Status__c</fullName>
    <formula>IF( AM_US_Asset_Waiver_Count__c &gt;0,&quot;On File&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Waiver Status</label>
    <type>Text</type>
</CustomField>