force-app/main/default/objects/Contact/fields/Attrition__c.field-meta.xml
<CustomField>
    <fullName>Attrition__c</fullName>
    <label>Attrition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary – Loss of experience</fullName>
            </value>
            <value>
                <fullName>Voluntary – Loss of experience/revenue</fullName>
            </value>
            <value>
                <fullName>Voluntary – No loss of experience</fullName>
            </value>
            <value>
                <fullName>Involuntary – Loss of experience</fullName>
            </value>
            <value>
                <fullName>Involuntary – Loss of experience/revenue</fullName>
            </value>
            <value>
                <fullName>Involuntary – No loss of experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>