force-app/main/default/objects/Contact/fields/BackupID__c.field-meta.xml
<CustomField>
    <fullName>BackupID__c</fullName>
    <description>Backup ID from Exchange (DE)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BackupID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>