force-app/main/default/objects/Contact/fields/CCZimDentalCustomerId__c.field-meta.xml
<CustomField>
    <fullName>CCZimDentalCustomerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCZimDentalCustomerId</label>
    <type>TextArea</type>
</CustomField>