force-app/main/default/objects/Contact/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CEO communication flag</description>
    <label>CEO Communication</label>
    <type>Checkbox</type>
</CustomField>