force-app/main/default/objects/Contact/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; Middle_Name__c &amp; &quot; &quot; &amp; LastName &amp; &quot; &quot; &amp; TEXT(Contact_Title__c)</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>