force-app/main/default/objects/Contact/fields/Contact_Picture__c.field-meta.xml
<CustomField>
    <fullName>Contact_Picture__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; btydev__Picture_Id__c, &quot;&quot;,150,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Picture</label>
    <type>Text</type>
</CustomField>