force-app/main/default/objects/Contact/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Assistante dentaire</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>CDT</fullName>
            </value>
            <value>
                <fullName>Chair of Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Chair of Periodontics</fullName>
            </value>
            <value>
                <fullName>Chair of Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Chef de clinique</fullName>
            </value>
            <value>
                <fullName>Chef de service</fullName>
            </value>
            <value>
                <fullName>Clinical Department Manager</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DDS, MD</fullName>
            </value>
            <value>
                <fullName>DDS, MS</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Dental Technician</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Director of Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Director of Periodontics</fullName>
            </value>
            <value>
                <fullName>Director of Prosthodontics</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>Endodontist</fullName>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>Hygienist</fullName>
            </value>
            <value>
                <fullName>Implant Co-coordinator</fullName>
            </value>
            <value>
                <fullName>Implantologist</fullName>
            </value>
            <value>
                <fullName>Laboratory Implant Director</fullName>
            </value>
            <value>
                <fullName>Laboratory Implant Manager</fullName>
            </value>
            <value>
                <fullName>Lab Owner</fullName>
            </value>
            <value>
                <fullName>Maxillofacial Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>