force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Reciprocal</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>CFS</fullName>
            </value>
            <value>
                <fullName>EDI-GHX</fullName>
            </value>
            <value>
                <fullName>Zahntechnikermeister</fullName>
            </value>
            <value>
                <fullName>Zahntechniker</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>PACS admin</fullName>
            </value>
            <value>
                <fullName>Scan Tech</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>PDM</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>AVP</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>NAM Surgeon</fullName>
            </value>
            <value>
                <fullName>APAC Surgeon</fullName>
            </value>
            <value>
                <fullName>EMEA Surgeon</fullName>
            </value>
            <value>
                <fullName>CT Scan Tech</fullName>
            </value>
            <value>
                <fullName>MRI Scan Tech</fullName>
            </value>
            <value>
                <fullName>X-ray Scan Tech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>