force-app/main/default/objects/Contact/fields/ContactRecord_Type_Hidden__c.field-meta.xml
<CustomField>
    <fullName>ContactRecord_Type_Hidden__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactRecord Type (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>