force-app/main/default/objects/Contact/fields/Contaktqualification__c.field-meta.xml
<CustomField>
    <fullName>Contaktqualification__c</fullName>
    <label>Kontaktqualifikation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>