force-app/main/default/objects/Contact/fields/Contract_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Person responsible for contract approval</inlineHelpText>
    <label>Contract Signatory</label>
    <type>Checkbox</type>
</CustomField>