force-app/main/default/objects/Contact/fields/CRM_Weekly_Email__c.field-meta.xml
<CustomField>
    <fullName>CRM_Weekly_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox on Contact record to allow Sales users to determine if they want access to the weekly Salesforce email.</description>
    <label>CRM Weekly Email</label>
    <type>Checkbox</type>
</CustomField>