force-app/main/default/objects/Contact/fields/Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell__c</fullName>
    <label>Cross Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>CMF&amp;T</fullName>
            </value>
            <value>
                <fullName>OBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>