force-app/main/default/objects/Contact/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>Month(Hire_Date__c) - Month(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>