force-app/main/default/objects/Contact/fields/DCSNoPlusName__c.field-meta.xml
<CustomField>
    <fullName>DCSNoPlusName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCSNoPlusName</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>