force-app/main/default/objects/Contact/fields/Deactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactive_Date__c</fullName>
    <description>This gives the date on which the contacts was deactivated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deactive Date</label>
    <type>Date</type>
</CustomField>