force-app/main/default/objects/Contact/fields/Distributor_Managed__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor Managed?</label>
    <type>Checkbox</type>
</CustomField>