force-app/main/default/objects/Contact/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>The division of the hospital the contact is working in.</description>
    <inlineHelpText>Select the division of the hospital the contact is working in.</inlineHelpText>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Anaesthesia</fullName>
            </value>
            <value>
                <fullName>Cardiac Surgery</fullName>
            </value>
            <value>
                <fullName>Cardiothoracic Surgery</fullName>
            </value>
            <value>
                <fullName>Central Sterile Services Department (CSSD)</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Emergency Room</fullName>
            </value>
            <value>
                <fullName>Foot and Ankle Surgery</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Hand Surgery</fullName>
            </value>
            <value>
                <fullName>Hospital Hygiene</fullName>
            </value>
            <value>
                <fullName>Hospital Management</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Medical Controlling</fullName>
            </value>
            <value>
                <fullName>Medical Product Safety</fullName>
            </value>
            <value>
                <fullName>Medical Technology</fullName>
            </value>
            <value>
                <fullName>Neurosurgery</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Operating Room</fullName>
            </value>
            <value>
                <fullName>Oral and Maxillofacial Surgery</fullName>
            </value>
            <value>
                <fullName>Orthopaedics</fullName>
            </value>
            <value>
                <fullName>Paediatric Surgery</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Quality Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>