force-app/main/default/objects/Contact/fields/EDI__c.field-meta.xml
<CustomField>
    <fullName>EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Transmission of PO, order acknowledgement, invoicing of data, backorder exposure, or system downtime notifications.</inlineHelpText>
    <label>EDI eCommerce</label>
    <type>Checkbox</type>
</CustomField>