force-app/main/default/objects/Contact/fields/EDI_Management__c.field-meta.xml
<CustomField>
    <fullName>EDI_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>GHX, GXS, VAN Support</inlineHelpText>
    <label>EDI Management</label>
    <type>Checkbox</type>
</CustomField>