force-app/main/default/objects/Contact/fields/Editdate__c.field-meta.xml
<CustomField>
    <fullName>Editdate__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bearbeitungsdatum</label>
    <type>Date</type>
</CustomField>