force-app/main/default/objects/Contact/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>Educational background</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>