force-app/main/default/objects/Contact/fields/Email_Access__c.field-meta.xml
<CustomField>
    <fullName>Email_Access__c</fullName>
    <defaultValue>&quot;No Emails&quot;</defaultValue>
    <label>P4P Email Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>No Emails</fullName>
                <default>true</default>
                <label>No Emails</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>