force-app/main/default/objects/Contact/fields/Email_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Verification Date</label>
    <type>Date</type>
</CustomField>