force-app/main/default/objects/Contact/fields/Email_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Status__c</fullName>
    <label>Email Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Accept_All</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>