force-app/main/default/objects/Contact/fields/EMEA_Zimmer_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Zimmer_Bulletin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by ExactTarget to show those that are on the EMEA Zimmer Bulletin</description>
    <label>EMEA Zimmer Bulletin</label>
    <type>Checkbox</type>
</CustomField>