force-app/main/default/objects/Contact/fields/Employee_Non_Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee_Non_Employee__c</fullName>
    <inlineHelpText>This field provides information about an employee status</inlineHelpText>
    <label>In HRIS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
                <isActive>false</isActive>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Non-Employee</fullName>
                <isActive>false</isActive>
                <label>Non-Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>