force-app/main/default/objects/Contact/fields/Expiration_Management__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Weekly update for expired inventory</inlineHelpText>
    <label>Expiration Management</label>
    <type>Checkbox</type>
</CustomField>