force-app/main/default/objects/Contact/fields/External_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Contact ID (SSI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>