force-app/main/default/objects/Contact/fields/F_hrungsebene__c.field-meta.xml
<CustomField>
    <fullName>F_hrungsebene__c</fullName>
    <inlineHelpText>Values 1,2,3 Recon 
SP1,2 for Spine Contacts 
TR1,2 for Trauma Contacts</inlineHelpText>
    <label>Management Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>SP1</fullName>
            </value>
            <value>
                <fullName>SP2</fullName>
            </value>
            <value>
                <fullName>TR1</fullName>
            </value>
            <value>
                <fullName>TR2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>