force-app/main/default/objects/Contact/fields/Familystatus__c.field-meta.xml
<CustomField>
    <fullName>Familystatus__c</fullName>
    <label>Familienstand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>geschieden</fullName>
            </value>
            <value>
                <fullName>ledig</fullName>
            </value>
            <value>
                <fullName>verheiratet</fullName>
            </value>
            <value>
                <fullName>verwitwet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>