force-app/main/default/objects/Contact/fields/Favorites__c.field-meta.xml
<CustomField>
    <fullName>Favorites__c</fullName>
    <description>Description of favorites</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Favorites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>