force-app/main/default/objects/Contact/fields/Finance_Segment__c.field-meta.xml
<CustomField>
    <fullName>Finance_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Finance Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>