force-app/main/default/objects/Contact/fields/Freight_Carrier_Interruptions__c.field-meta.xml
<CustomField>
    <fullName>Freight_Carrier_Interruptions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>National Service disruptions from major carriers (FedEx, UPS) that impact outbound shipments from our primary warehouses due to carrier or processing constraints</inlineHelpText>
    <label>Freight Carrier Interruptions</label>
    <type>Checkbox</type>
</CustomField>