force-app/main/default/objects/Contact/fields/Functie_verfijning__c.field-meta.xml
<CustomField>
    <fullName>Functie_verfijning__c</fullName>
    <description>Geef exacte functiebenaming aan zoals contactpersoon zelf gebruikt.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Geef exacte functiebenaming aan zoals contactpersoon zelf gebruikt.</inlineHelpText>
    <label>Functie verfijning</label>
    <type>TextArea</type>
</CustomField>