force-app/main/default/objects/Contact/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Functional Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>